weapon test commit

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
 <li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
-<li><a href="https://pre00.deviantart.net/4fa1/th/pre/i/2010/254/0/4/chibi_metroid_by_freak_sider-d2yhe9u.png">Metroid (Unity Remaster)</a></li>
 </ul>
 
+<h3>My Contributions to the Zelda Game</h3>
+
+<h4>Weapon System</h4>
+<p>I developed the weapon system, which functioned off of a main weapon component, as well as components
+    for each individual weapon that would call functions from the main weapon comoponent on initialization.
+    This allowed weapons like the bow, sword (at full health), and boomerand to share a singular function for 
+    projectile movement, with some modifiers built in to accomodate each weapon's special functions.
+</p>
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
