--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
+<h2>Game Controls</h2>
+<div>
+    Movement: Arrow Keys, WASD
+
+    Primary Weapon (Sword): X
+
+    Secondary Weapon: Z
+
+    Swap Weapons: Space Bar
+
+    Toggle Cheats: 1
+
+    Switch to Novel Scene: 4
+</div>
+
 <h3>My Contributions to the Zelda Game</h3>
 
 <h4>Weapon System</h4>
