--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="/game/WebBuildgold/index.html">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 <h2>Game Controls</h2>
 <div>
-    Movement: Arrow Keys, WASD
-
-    Primary Weapon (Sword): X
-
-    Secondary Weapon: Z
-
-    Swap Weapons: Space Bar
-
-    Toggle Cheats: 1
-
-    Switch to Novel Scene: 4
+    <p>Movement: Arrow Keys, WASD</p>
+    <p>Primary Weapon (Sword): X</p>
+    <p>Secondary Weapon: Z</p>
+    <p>Swap Weapons: Space Bar</p>
+    <p>Toggle Cheats: 1</p>
+    <p>Switch to Novel Scene: 4</p>
 </div>
 
 <h3>My Contributions to the Zelda Game</h3>
