--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="/game/WebBuildgold/index.html">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="https://strasz04.itch.io/zelda">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 <h2>Game Controls</h2>
