--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <h2>Game Controls</h2>
 <div>
+    <p>Full Screen to view game properly</p>
     <p>Movement: Arrow Keys, WASD</p>
     <p>Primary Weapon (Sword): X</p>
     <p>Secondary Weapon: Z</p>
