--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://strasz04.itch.io/zelda">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="https://drive.google.com/file/d/1196bXhhAAYZzmnTOX4sJjAVDwUg9Hhw4/view?usp=sharing">The Legend of Zelda (Mac Build)</a></li>
+<li><a href="https://drive.google.com/file/d/17LeMuk8SNH1ho_7ekItKIo1JP22yduOY/view?usp=sharing">The Legend of Zelda (Windows Build)</a></li>
 </ul>
 
 <h2>Game Controls</h2>
